# Log-Router

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entry.py  pyproject.toml  routing.py  test_script.sh
database/versions/: 1fbe5e12d241_create_index_on_user_id_in_user_log_.py  4c3482859dd8_log_table.py  98127a99399b_add_unique_contraint_on_user_log_entry.py
log_router/common/: backend.py  file_handler.py  utils.py
log_router/config/: default.yml  uri_parsing.py
log_router/constant/: user_log.py
log_router/controller/: user_log.py
log_router/models/: user_log.py
log_router/scripts/: dump_logs_to_database.py
log_router/serializor/: user_log.py
